@@ -1,22 +1,23 @@
 package ar.edu.utn.frba.dds.controllers.colaboraciones;
 
 import ar.edu.utn.frba.dds.dtos.RedirectDTO;
+import ar.edu.utn.frba.dds.dtos.colaboraciones.ColaboracionDTO;
 import ar.edu.utn.frba.dds.dtos.colaboraciones.OfertaDeProductosDTO;
 import ar.edu.utn.frba.dds.exceptions.InvalidFormParamException;
 import ar.edu.utn.frba.dds.exceptions.NonColaboratorException;
 import ar.edu.utn.frba.dds.exceptions.ResourceNotFoundException;
 import ar.edu.utn.frba.dds.exceptions.UnauthorizedException;
-import ar.edu.utn.frba.dds.models.entities.colaboracion.Colaboracion;
 import ar.edu.utn.frba.dds.models.entities.colaboracion.OfertaDeProductos;
 import ar.edu.utn.frba.dds.models.entities.colaboracion.RubroOferta;
+import ar.edu.utn.frba.dds.models.entities.colaboracion.TipoColaboracion;
 import ar.edu.utn.frba.dds.models.entities.colaborador.Colaborador;
 import ar.edu.utn.frba.dds.models.entities.data.Imagen;
 import ar.edu.utn.frba.dds.services.colaboraciones.OfertaProductosServiciosService;
 import ar.edu.utn.frba.dds.services.colaborador.ColaboradorService;
-import ar.edu.utn.frba.dds.services.files.FileService;
+import ar.edu.utn.frba.dds.services.images.ImageService;
 import ar.edu.utn.frba.dds.services.usuario.UsuarioService;
-import ar.edu.utn.frba.dds.utils.ColaboradorPorSession;
 import ar.edu.utn.frba.dds.utils.ICrudViewsHandler;
+import ar.edu.utn.frba.dds.utils.UserRequired;
 import io.javalin.http.Context;
 import io.javalin.http.HttpStatus;
 import io.javalin.http.UploadedFile;
@@ -24,35 +25,35 @@ import io.javalin.validation.ValidationException;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-public class OfertaProductosServiciosController extends ColaboradorPorSession implements ICrudViewsHandler {
+public class OfertaProductosServiciosController extends UserRequired implements ICrudViewsHandler {
 
     private final OfertaProductosServiciosService ofertaProductosServiciosService;
-    private final FileService fileService;
+    private final ImageService imageService;
 
 
-    public OfertaProductosServiciosController(OfertaProductosServiciosService ofertaProductosServiciosService,
-                                              FileService fileService,
-                                              UsuarioService usuarioService,
-                                              ColaboradorService colaboradorService) {
+    public OfertaProductosServiciosController(UsuarioService usuarioService,
+                                              ColaboradorService colaboradorService,
+                                              OfertaProductosServiciosService ofertaProductosServiciosService,
+                                              ImageService imageService) {
 
         super(usuarioService, colaboradorService);
         this.ofertaProductosServiciosService = ofertaProductosServiciosService;
-        this.fileService = fileService;
+        this.imageService = imageService;
     }
 
     @Override
-    public void index(Context context) {
+    public void index(Context context) { // TODO - Revisar
         List<OfertaDeProductos> productos = this.ofertaProductosServiciosService.buscarTodos();
 
-        List<OfertaDeProductosDTO> ofertaDeProductosDTOS = productos.stream()
+        List<ColaboracionDTO> ofertaDeProductosDTOS = productos.stream()
                 .map(OfertaDeProductosDTO::preview)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<String, Object> model = new HashMap<>();
         model.put("colaboraciones", ofertaDeProductosDTOS);
@@ -62,7 +63,7 @@ public class OfertaProductosServiciosController extends ColaboradorPorSession im
     }
 
     @Override
-    public void show(Context context) {
+    public void show(Context context) { // TODO - Revisar
         String ofertaProductoId = context.pathParam("id");
         Optional<OfertaDeProductos> ofertaDeProductos = this.ofertaProductosServiciosService.buscarPorId(ofertaProductoId);
 
@@ -81,61 +82,45 @@ public class OfertaProductosServiciosController extends ColaboradorPorSession im
 
     @Override
     public void create(Context context) {
+        Colaborador colaborador = colaboradorFromSession(context);
 
-        try {
-            Colaborador colaborador = obtenerColaboradorPorSession(context);
+        if (!colaborador.puedeColaborar(TipoColaboracion.OFERTA_DE_PRODUCTOS))
+            throw new UnauthorizedException("No tienes permiso");
 
-            boolean tieneColaboracion = colaborador.getFormaDeColaborar()
-                    .stream()
-                    .anyMatch(colaboracion -> colaboracion.equals(Colaboracion.OFERTA_DE_PRODUCTOS));
+        List<String> rubros = Arrays.stream(RubroOferta.values())
+                .map(Enum::toString).toList();
 
-            if (!tieneColaboracion) {
-                throw new UnauthorizedException("No tienes permiso");
-            }
-
-            context.render("colaboraciones/oferta_prod_serv_crear.hbs");
-
-        } catch (ResourceNotFoundException | NonColaboratorException e) {
-            throw new UnauthorizedException();
-        }
-
+        Map<String, Object> model = new HashMap<>();
+        model.put("rubros", rubros);
+        render(context, "colaboraciones/oferta_prod_serv_crear.hbs", model);
     }
 
     @Override
     public void save(Context context) {
-
         Map<String, Object> model = new HashMap<>();
         List<RedirectDTO> redirectDTOS = new ArrayList<>();
         boolean operationSuccess = false;
 
-
         try {
-
-
-            Colaborador colaborador = obtenerColaboradorPorSession(context);
+            Colaborador colaborador = colaboradorFromSession(context);
 
             String nombre = context.formParamAsClass("nombre", String.class).get();
-            Double puntosNecesarios = Double.valueOf(context.formParamAsClass("puntos", Double.class).get());
+            Double puntosNecesarios = context.formParamAsClass("puntos", Double.class).get();
             RubroOferta rubro = RubroOferta.valueOf(context.formParamAsClass("rubro", String.class).get());
 
             UploadedFile uploadedFile = context.uploadedFile("imagen");
             if (uploadedFile == null) throw new InvalidFormParamException();
-            String pathImagen = fileService.guardarImagen(uploadedFile.content(), uploadedFile.extension());
+            String pathImagen = imageService.guardarImagen(uploadedFile.content(), uploadedFile.extension());
 
             OfertaDeProductos oferta = OfertaDeProductos.por(
-                    colaborador,
-                    LocalDateTime.now(),
-                    nombre,
-                    puntosNecesarios,
-                    rubro,
-                    new Imagen(pathImagen));
+                    colaborador, LocalDateTime.now(), nombre, puntosNecesarios, rubro, new Imagen(pathImagen));
 
-            this.ofertaProductosServiciosService.guardar(oferta);
+            this.ofertaProductosServiciosService.registrar(oferta);
 
             operationSuccess = true;
             redirectDTOS.add(new RedirectDTO("/colaboraciones", "Seguir Colaborando"));
 
-        } catch (ResourceNotFoundException | NonColaboratorException e) {
+        } catch (NonColaboratorException e) {
             throw new UnauthorizedException();
         } catch (ValidationException | InvalidFormParamException | IOException e) {
             redirectDTOS.add(new RedirectDTO(context.fullUrl(), "Reintentar"));
@@ -167,7 +152,7 @@ public class OfertaProductosServiciosController extends ColaboradorPorSession im
 
         Colaborador colaboradorOfertante = posibleOfertaAEliminar.get().getColaborador();
 
-        Colaborador colaboradorSession = obtenerColaboradorPorSession(context);
+        Colaborador colaboradorSession = colaboradorFromSession(context);
 
         if (colaboradorOfertante != colaboradorSession) {
             throw new UnauthorizedException("No tiene permiso paraColaborador eliminar la oferta");
